--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "firebase": "^9.20.0",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -24,7 +25,6 @@
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "https://youtube-clone-api224.onrender.com/api",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
