--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "https://youtube-clone-api224.onrender.com/api",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
